# LDA

./: .buildinfo  Electricity time series.html  LDA.html  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: LDA.ipynb  intro.md
lda_notebook/: Electricity time series.ipynb  LDA.ipynb  _config.yml  _toc.yml  intro.md  requirements.txt
lda_notebook/_build/.doctrees/: Electricity time series.doctree  LDA.doctree  README.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
lda_notebook/_build/html/: .buildinfo  Electricity time series.html  LDA.html  README.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
lda_notebook/_build/html/_sources/: Electricity time series.ipynb  LDA.ipynb
lda_notebook/_build/jupyter_execute/: Electricity time series.ipynb  LDA.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
