[project]
name = "lda"
version = "0.1.0"
description = ""
authors = [
    {name = "emmabewley99",email = "emma.bewley500@btinternet.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "ipython (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
